Made Initial Dashboard

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </svg>
       </a>
     </div>
-    <div class="copy">© <span id="year"></span> Pulse. All rights reserved.</div>
+    <div class="copy">© <span id="year"></span> Made with love by Ammad Ahmed.</div>
   </footer>
 
   <script src="landing.js" defer></script>
