--- a/login.html
+++ b/login.html
@@ -21,10 +21,12 @@
         <div class="field">
           <input id="loginEmail" name="email" type="email" required placeholder=" " autocomplete="email" />
           <label for="loginEmail">Email</label>
+          <small class="error" id="loginEmailErr"></small>
         </div>
         <div class="field">
           <input id="loginPassword" name="password" type="password" required placeholder=" " autocomplete="current-password" />
           <label for="loginPassword">Password</label>
+          <small class="error" id="loginPasswordErr"></small>
         </div>
         <button class="btn" type="submit">Login</button>
       </form>
