--- a/signup.html
+++ b/signup.html
@@ -19,16 +19,24 @@
       <p class="subtitle">Join a minimalist social space to share ideas and connect.</p>
       <form id="signupForm" class="form">
         <div class="field">
+          <input id="username" name="username" type="text" required placeholder=" " autocomplete="username" />
+          <label for="username">Username</label>
+          <small class="error" id="usernameErr"></small>
+        </div>
+        <div class="field">
           <input id="name" name="name" type="text" required placeholder=" " autocomplete="name" />
           <label for="name">Name</label>
+          <small class="error" id="nameErr"></small>
         </div>
         <div class="field">
           <input id="email" name="email" type="email" required placeholder=" " autocomplete="email" />
           <label for="email">Email</label>
+          <small class="error" id="emailErr"></small>
         </div>
         <div class="field">
           <input id="password" name="password" type="password" required placeholder=" " autocomplete="new-password" />
           <label for="password">Password</label>
+          <small class="error" id="passwordErr"></small>
         </div>
         <button class="btn" type="submit">Sign Up</button>
       </form>
