--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PULSE — Social Media</title>
+  <title>BlogSyte - Blogging Platform</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="navbar" id="navbar">
     <div class="nav-inner">
-      <a href="#home" class="logo">PULSE</a>
+      <a href="#home" class="logo">BlogSyte</a>
       <nav class="nav-links">
         <a href="#home" class="nav-link">Home</a>
         <a href="#features" class="nav-link">Features</a>
         <a href="login.html" class="nav-link login-link">Login</a>
       </nav>
+      <button class="icon-btn theme-toggle" id="themeToggle" aria-label="Toggle theme">
+        🌙
+      </button>
     </div>
   </header>
 
