--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
   </div>
   <main class="auth-container">
     <a href="index.html" class="brand">PULSE</a>
+    <button class="icon-btn theme-toggle" id="themeToggle" aria-label="Toggle theme">🌙</button>
     <section class="card">
       <h1 class="title">Welcome back</h1>
       <p class="subtitle">Sign in to continue your journey.</p>
