--- a/dashboard.html
+++ b/dashboard.html
@@ -24,6 +24,7 @@
       <div class="side-inner">
         <button class="side-item active" data-view="overview"><span class="ico">📊</span> Overview</button>
         <button class="side-item" data-view="blogs"><span class="ico">📝</span> Your Blogs</button>
+        <button class="side-item" data-view="explore"><span class="ico">🔎</span> Explore Blogs</button>
         <button class="side-item" data-view="create"><span class="ico">➕</span> Create Post</button>
         <button class="side-item" data-view="settings"><span class="ico">⚙️</span> Settings</button>
       </div>
@@ -79,7 +80,7 @@
             <h2>Create Post</h2>
             <form class="form" id="createForm">
               <div class="field">
-                <input type="text" id="blogName" placeholder=" " autocomplete="off" />
+                <input type="text" id="blogName" placeholder="" autocomplete="off" />
                 <label for="blogName">Blog Name</label>
               </div>
               <div class="field">
@@ -99,11 +100,11 @@
                 <label for="category">Category</label>
               </div>
               <div class="field">
-                <input type="url" id="imageUrl" placeholder=" " autocomplete="off" />
+                <input type="url" id="imageUrl" placeholder="" autocomplete="off" />
                 <label for="imageUrl">Image URL</label>
               </div>
               <div class="field">
-                <textarea id="description" rows="5" placeholder=" "></textarea>
+                <textarea id="description" rows="5" placeholder=""></textarea>
                 <label for="description">Description</label>
               </div>
               <button type="button" class="btn primary" id="createBtn">Create Post</button>
@@ -130,26 +131,26 @@
           <article class="card">
             <form class="form">
               <div class="field">
-                <input type="text" id="setUsername" placeholder=" " autocomplete="off" />
+                <input type="text" id="setUsername" placeholder="" autocomplete="off" />
                 <label for="setUsername">Username</label>
               </div>
               <div class="field">
-                <input type="text" id="setFullName" placeholder=" " autocomplete="off" />
+                <input type="text" id="setFullName" placeholder="" autocomplete="off" />
                 <label for="setFullName">Full Name</label>
               </div>
               <div class="field">
-                <input type="email" id="setEmail" placeholder=" " autocomplete="off" />
+                <input type="email" id="setEmail" placeholder="" autocomplete="off" />
                 <label for="setEmail">Email</label>
               </div>
               <div class="field">
-                <input type="url" id="setAvatar" placeholder=" " autocomplete="off" />
+                <input type="url" id="setAvatar" placeholder="" autocomplete="off" />
                 <label for="setAvatar">Profile Picture URL</label>
               </div>
               <div class="field">
-                <textarea id="setBio" rows="4" placeholder=" "></textarea>
+                <textarea id="setBio" rows="4" placeholder=""></textarea>
                 <label for="setBio">Bio</label>
               </div>
-              <button type="button" class="btn primary">Save Changes</button>
+              <button type="button" class="btn primary" id="saveSettingsBtn">Save Changes</button>
             </form>
           </article>
         </div>
