--- a/exploreBlogs.html
+++ b/exploreBlogs.html
@@ -9,9 +9,23 @@
   <style>
     #view-explore .grid.list { grid-template-columns: 1fr; max-width: 840px; margin: 0 auto; padding: 0 20px; }
     .search-wrap { max-width: 840px; margin: 70px auto 16px; padding: 0 20px; }
+    .search-row { display:flex; gap:8px; }
     .search-input { width: 100%; padding: 12px 14px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.14); background: rgba(255,255,255,0.05); color: var(--text); font-size: 14px; }
+    #exploreCategory.search-input { width: 220px; }
+    #exploreSort.search-input { width: 200px; }
+    #view-explore .preview-image { min-height: 160px; height: 160px; }
+    @media (min-width: 640px) { #view-explore .preview-image { min-height: 200px; height: 200px; } }
+    @media (min-width: 992px) { #view-explore .preview-image { min-height: 280px; height: 280px; } }
+    @media (min-width: 1200px) { #view-explore .preview-image { min-height: 320px; height: 320px; } }
     .nav-center { position: absolute; left: 50%; transform: translateX(-50%); pointer-events: none; }
     .nav-title { font-weight: 800; letter-spacing: -0.2px; }
+    .feed-head { display:flex; align-items:center; justify-content:space-between; gap:10px; }
+    .feed-left { display:flex; align-items:center; gap:12px; }
+    .feed-avatar { width: 40px; height: 40px; border-radius: 50%; border: 1px solid rgba(255,255,255,0.14); background: rgba(255,255,255,0.06); overflow: hidden; display:grid; place-items:center; font-weight:700; color: var(--text); }
+    .feed-avatar img { width:100%; height:100%; object-fit:cover; display:block; }
+    [data-theme='light'] .feed-avatar { border-color: rgba(0,0,0,0.10); background: #f3f5fa; }
+    .feed-meta { display:flex; flex-direction:column; gap:4px; }
+    .feed-user { font-weight:700; font-size:14px; color: var(--text); }
   </style>
 </head>
 <body>
@@ -22,13 +36,35 @@
     <div class="nav-center"><div class="nav-title">Explore Blogs</div></div>
     <div class="nav-right">
       <div class="greet">Hi, <span id="navUserExplore">User</span></div>
+      <button class="icon-btn theme-toggle" id="themeToggle" aria-label="Toggle theme">🌙</button>
       <a class="btn ghost" href="dashboard.html">Dashboard</a>
     </div>
   </header>
 
   <main class="main" style="margin-top:58px;">
     <div class="search-wrap">
-      <input type="text" id="exploreSearch" class="search-input" placeholder="Search blogs by title, category, author, description" />
+      <div class="search-row">
+        <input type="text" id="exploreSearch" class="search-input" placeholder="Search blogs by title, category, author, description" />
+        <select id="exploreCategory" class="search-input">
+          <option value="all">All</option>
+          <option>Technology</option>
+          <option>Science</option>
+          <option>Movies</option>
+          <option>Sports</option>
+          <option>Lifestyle</option>
+          <option>Travel</option>
+          <option>Business</option>
+          <option>Gaming</option>
+          <option>Education</option>
+          <option>Health</option>
+        </select>
+        <select id="exploreSort" class="search-input">
+          <option value="latest">Latest First</option>
+          <option value="oldest">Oldest First</option>
+          <option value="likes">Most Liked</option>
+          <option value="comments">Most Comments</option>
+        </select>
+      </div>
     </div>
     <section class="view active" id="view-explore">
       <div class="grid list" id="exploreList"></div>
@@ -41,6 +77,9 @@
   const qs = s => document.querySelector(s);
   const qsa = s => Array.from(document.querySelectorAll(s));
   const showToast = (msg) => { const t = qs('#toast'); if (!t) return; t.textContent = msg; t.classList.add('show'); setTimeout(() => t.classList.remove('show'), 1400); };
+  const applyTheme = t => { document.documentElement.setAttribute('data-theme', t); const btn = qs('#themeToggle'); if (btn) btn.textContent = t === 'light' ? '☀️' : '🌙'; localStorage.setItem('theme', t); };
+  const initTheme = () => { const t = localStorage.getItem('theme') || 'dark'; applyTheme(t); const btn = qs('#themeToggle'); if (btn) btn.addEventListener('click', () => { const next = document.documentElement.getAttribute('data-theme') === 'light' ? 'dark' : 'light'; applyTheme(next); }); };
+  initTheme();
   function getUsers() { try { return JSON.parse(localStorage.getItem('users') || '[]'); } catch { return []; } }
   function getCurrentUser() { try { return JSON.parse(localStorage.getItem('currentUser') || 'null'); } catch { return null; } }
   function setCurrentUser(cu) { localStorage.setItem('currentUser', JSON.stringify(cu)); }
@@ -57,13 +96,22 @@
     const u = users.find(x => String(x.email).toLowerCase() === String(email).toLowerCase());
     return (u && (u.username || u.name)) || email;
   };
+  const formatDT = (ts) => {
+    if (!ts) return '';
+    try { return new Date(ts).toLocaleString(); } catch { return ''; }
+  };
 
   const exploreList = qs('#exploreList');
-  const renderFeed = (q = '') => {
-    let arr = getBlogs().sort((a,b) => (b.createdAt||0) - (a.createdAt||0));
+  const renderFeed = (q = '', cat = '', sortKey = 'latest') => {
+    const all = getBlogs();
     const term = (q || '').toLowerCase();
+    const catTerm = (cat || '').toLowerCase();
+    let list = all;
+    if (catTerm && catTerm !== 'all') {
+      list = list.filter(b => String(b.category||'').toLowerCase() === catTerm);
+    }
     if (term) {
-      arr = arr.filter(b => {
+      list = list.filter(b => {
         const author = nameByEmail(b.userEmail).toLowerCase();
         return (String(b.name||'').toLowerCase().includes(term)
           || String(b.category||'').toLowerCase().includes(term)
@@ -71,22 +119,39 @@
           || author.includes(term));
       });
     }
-    if (!arr.length) { exploreList.innerHTML = `<article class="card"><strong>No blogs yet</strong></article>`; return; }
-    exploreList.innerHTML = arr.map(b => `
+    if (sortKey === 'latest') {
+      list = list.sort((a,b) => (b.createdAt||0) - (a.createdAt||0));
+    } else if (sortKey === 'oldest') {
+      list = list.sort((a,b) => (a.createdAt||0) - (b.createdAt||0));
+    } else if (sortKey === 'likes') {
+      list = list.sort((a,b) => (b.likes||0) - (a.likes||0));
+    } else if (sortKey === 'comments') {
+      const cl = x => Array.isArray(x.comments) ? x.comments.length : 0;
+      list = list.sort((a,b) => cl(b) - cl(a));
+    }
+    if (!list.length) { exploreList.innerHTML = `<article class="card"><strong>No blogs found</strong></article>`; return; }
+    exploreList.innerHTML = list.map(b => { const liked = Array.isArray(b.likedBy) && b.likedBy.some(e => String(e).toLowerCase() === String(cu.email).toLowerCase()); return `
       <article class="card" data-id="${b.id}">
         <div style="display:grid; gap:10px;">
-          <div style="display:flex; align-items:center; gap:10px;">
-            <div class="pill">${b.category}</div>
-            <div style="color:var(--muted); font-size:13px;">by ${nameByEmail(b.userEmail)}</div>
+          <div class="feed-head">
+            <div class="feed-left">
+              ${(() => { const users = getUsers(); const u = users.find(x => String(x.email).toLowerCase() === String(b.userEmail).toLowerCase()); const avatar = u && u.avatar; const ok = avatar && /^https?:\/\//i.test(avatar); const nm = nameByEmail(b.userEmail); const init = (nm||'').charAt(0).toUpperCase(); return ok ? `<div class="feed-avatar"><img src="${avatar}" alt="${nm}" /></div>` : `<div class="feed-avatar"><span>${init || '?'}</span></div>`; })()}
+              <div class="feed-meta">
+                <div class="feed-user">${nameByEmail(b.userEmail)}</div>
+                <div class="feed-category"><div class="pill">${b.category}</div></div>
+              </div>
+            </div>
+            <div style="color:var(--muted); font-size:12px;">${formatDT(b.createdAt)}</div>
           </div>
           <h3 style="margin:6px 0;">${b.name}</h3>
-          <div class="preview-image" style="min-height:220px; background-image: ${b.image && /^https?:\/\//i.test(b.image) ? 'url("' + b.image + '")' : ''};"></div>
+          <div class="preview-image">${b.image && /^https?:\/\//i.test(b.image) ? '<img src="' + b.image + '" alt="Blog image" loading="lazy" />' : ''}</div>
           <p style="color:var(--muted);">${b.description}</p>
           <div class="actions" style="justify-content:flex-start;">
-            <button class="btn small like-btn" data-id="${b.id}">❤️ Like (<span class="like-count" data-id="${b.id}">${b.likes || 0}</span>)</button>
+            <button class="btn small like-btn${liked ? ' liked' : ''}" data-id="${b.id}" data-liked="${liked ? 'true' : 'false'}">${liked ? '❤️ Liked' : '❤️ Like'} (<span class="like-count" data-id="${b.id}">${b.likes || 0}</span>)</button>
+            ${Array.isArray(b.comments) && b.comments.length ? `<button class="btn small ghost toggle-comments-btn" data-id="${b.id}" data-state="hidden" data-count="${Array.isArray(b.comments)?b.comments.length:0}">Show Comments (${Array.isArray(b.comments)?b.comments.length:0})</button>` : ''}
           </div>
           <div class="comments" style="display:grid; gap:8px;">
-            <div class="comment-items" id="comments-${b.id}">
+            <div class="comment-items" id="comments-${b.id}" ${Array.isArray(b.comments) && b.comments.length ? 'style="display:none;"' : ''}>
               ${Array.isArray(b.comments) && b.comments.length ? b.comments.map(c => `
                 <div class="card" style="padding:10px;">
                   <div style="font-weight:600; font-size:13px;">${nameByEmail(c.userEmail)}</div>
@@ -94,23 +159,45 @@
                 </div>`).join('') : '<div class="list-meta">No comments yet</div>'}
             </div>
             <div style="display:flex; gap:8px; align-items:center;">
-              <input type="text" class="comment-input" data-id="${b.id}" placeholder="Write a comment" style="flex:1; padding:10px 12px; border-radius:12px; border:1px solid rgba(255,255,255,0.14); background: rgba(255,255,255,0.05); color: var(--text);" />
+              <input type="text" class="comment-input search-input" data-id="${b.id}" placeholder="Write a comment" style="flex:1; padding:10px 12px; border-radius:12px; color: var(--text);" />
               <button class="btn small comment-btn" data-id="${b.id}">Comment</button>
             </div>
           </div>
         </div>
       </article>
-    `).join('');
+    `; }).join('');
     qsa('.like-btn').forEach(el => el.addEventListener('click', (e) => {
       const id = e.currentTarget.getAttribute('data-id');
       const arr = getBlogs();
       const idx = arr.findIndex(x => String(x.id) === String(id));
       if (idx < 0) return;
-      const likes = (arr[idx].likes || 0) + 1;
-      arr[idx].likes = likes;
-      setBlogs(arr);
-      const lc = qs(`.like-count[data-id="${id}"]`);
-      if (lc) lc.textContent = String(likes);
+      const me = String(cu.email).toLowerCase();
+      const likedBy = Array.isArray(arr[idx].likedBy) ? arr[idx].likedBy : [];
+      const already = likedBy.some(x => String(x).toLowerCase() === me);
+      let likes = arr[idx].likes || 0;
+      const btn = e.currentTarget;
+      if (already) {
+        arr[idx].likedBy = likedBy.filter(x => String(x).toLowerCase() !== me);
+        likes = Math.max(0, likes - 1);
+        arr[idx].likes = likes;
+        setBlogs(arr);
+        const lc = qs(`.like-count[data-id="${id}"]`);
+        if (lc) lc.textContent = String(likes);
+        btn.setAttribute('data-liked','false');
+        btn.classList.remove('liked');
+        btn.firstChild && (btn.firstChild.textContent = '❤️ Like ');
+      } else {
+        likedBy.push(cu.email);
+        arr[idx].likedBy = likedBy;
+        likes = likes + 1;
+        arr[idx].likes = likes;
+        setBlogs(arr);
+        const lc = qs(`.like-count[data-id="${id}"]`);
+        if (lc) lc.textContent = String(likes);
+        btn.setAttribute('data-liked','true');
+        btn.classList.add('liked');
+        btn.firstChild && (btn.firstChild.textContent = '❤️ Liked ');
+      }
     }));
     qsa('.comment-btn').forEach(el => el.addEventListener('click', (e) => {
       const id = e.currentTarget.getAttribute('data-id');
@@ -132,11 +219,33 @@
           <div style="font-weight:600; font-size:13px;">${nameByEmail(c.userEmail)}</div>
           <div style="font-size:14px; color:var(--text);">${c.text}</div>
         </div>`).join('');
+      if (typeof run === 'function') run();
+    }));
+    qsa('.toggle-comments-btn').forEach(el => el.addEventListener('click', (e) => {
+      const id = e.currentTarget.getAttribute('data-id');
+      const box = qs(`#comments-${id}`);
+      if (!box) return;
+      const state = e.currentTarget.getAttribute('data-state') || 'hidden';
+      const count = e.currentTarget.getAttribute('data-count') || '';
+      if (state === 'hidden') {
+        box.style.display = '';
+        e.currentTarget.setAttribute('data-state', 'shown');
+        e.currentTarget.textContent = 'Hide Comments';
+      } else {
+        box.style.display = 'none';
+        e.currentTarget.setAttribute('data-state', 'hidden');
+        e.currentTarget.textContent = `Show Comments${count ? ' (' + count + ')' : ''}`;
+      }
     }));
   };
   const searchInput = qs('#exploreSearch');
-  if (searchInput) searchInput.addEventListener('input', () => { renderFeed(searchInput.value.trim()); });
-  renderFeed();
+  const catSelect = qs('#exploreCategory');
+  const sortSelect = qs('#exploreSort');
+  const run = () => { const q = searchInput ? searchInput.value.trim() : ''; const cat = catSelect ? catSelect.value.trim() : ''; const sortKey = sortSelect ? sortSelect.value.trim() : 'latest'; renderFeed(q, cat, sortKey); };
+  if (searchInput) searchInput.addEventListener('input', run);
+  if (catSelect) catSelect.addEventListener('change', run);
+  if (sortSelect) sortSelect.addEventListener('change', run);
+  renderFeed('', 'all', 'latest');
   </script>
 </body>
 </html>
