--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,25 +8,27 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="auth.css" />
 </head>
+
 <body class="auth-body">
   <div class="bg">
     <div class="blob b1"></div>
     <div class="blob b2"></div>
   </div>
   <main class="auth-container">
-    <a href="index.html" class="brand">PULSE</a>
+    <a href="index.html" class="brand">BlogSyte</a>
     <button class="icon-btn theme-toggle" id="themeToggle" aria-label="Toggle theme">🌙</button>
     <section class="card">
       <h1 class="title">Welcome back</h1>
       <p class="subtitle">Sign in to continue your journey.</p>
       <form id="loginForm" class="form">
         <div class="field">
-          <input id="loginEmail" name="email" type="email" required placeholder="" autocomplete="email" />
+          <input id="loginEmail" name="email" type="email" required placeholder="Email" autocomplete="email" />
           <label for="loginEmail">Email</label>
           <small class="error" id="loginEmailErr"></small>
         </div>
         <div class="field">
-          <input id="loginPassword" name="password" type="password" required placeholder="" autocomplete="current-password" />
+          <input id="loginPassword" name="password" type="password" required placeholder="Password"
+            autocomplete="current-password" />
           <label for="loginPassword">Password</label>
           <small class="error" id="loginPasswordErr"></small>
         </div>
@@ -37,4 +40,5 @@
   </main>
   <script src="auth.js" defer></script>
 </body>
+
 </html>
