--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,35 +8,37 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="auth.css" />
 </head>
+
 <body class="auth-body">
   <div class="bg">
     <div class="blob b1"></div>
     <div class="blob b2"></div>
   </div>
   <main class="auth-container">
-    <a href="index.html" class="brand">PULSE</a>
+    <a href="index.html" class="brand">BlogSyte</a>
     <button class="icon-btn theme-toggle" id="themeToggle" aria-label="Toggle theme">🌙</button>
     <section class="card">
       <h1 class="title">Create account</h1>
       <p class="subtitle">Join a minimalist social space to share ideas and connect.</p>
       <form id="signupForm" class="form">
         <div class="field">
-          <input id="username" name="username" type="text" required placeholder="" autocomplete="username" />
+          <input id="username" name="username" type="text" required placeholder="Username" autocomplete="username" />
           <label for="username">Username</label>
           <small class="error" id="usernameErr"></small>
         </div>
         <div class="field">
-          <input id="name" name="name" type="text" required placeholder="" autocomplete="name" />
+          <input id="name" name="name" type="text" required placeholder="Name" autocomplete="name" />
           <label for="name">Name</label>
           <small class="error" id="nameErr"></small>
         </div>
         <div class="field">
-          <input id="email" name="email" type="email" required placeholder="" autocomplete="email" />
+          <input id="email" name="email" type="email" required placeholder="Email" autocomplete="email" />
           <label for="email">Email</label>
           <small class="error" id="emailErr"></small>
         </div>
         <div class="field">
-          <input id="password" name="password" type="password" required placeholder="" autocomplete="new-password" />
+          <input id="password" name="password" type="password" required placeholder="Password"
+            autocomplete="new-password" />
           <label for="password">Password</label>
           <small class="error" id="passwordErr"></small>
         </div>
@@ -47,4 +50,5 @@
   </main>
   <script src="auth.js" defer></script>
 </body>
+
 </html>
