--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard • BlogSyte</title>
+  <title>Dashboard - BlogSyte</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dashboard.css" />
 </head>
@@ -21,6 +21,7 @@
   </header>
 
   <div class="dash-wrap">
+    <div class="sidebar-overlay" id="sidebarOverlay"></div>
     <aside class="sidebar">
       <div class="side-inner">
         <button class="side-item active" data-view="overview"><span class="ico"></span> Overview</button>
