--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login — Pulse</title>
+  <title>Login - BlogSyte</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="auth.css" />
 </head>
@@ -18,6 +18,7 @@
     <a href="index.html" class="brand">BlogSyte</a>
     <button class="icon-btn theme-toggle" id="themeToggle" aria-label="Toggle theme">🌙</button>
     <section class="card">
+      <a href="index.html" class="back-link">Back</a>
       <h1 class="title">Welcome back</h1>
       <p class="subtitle">Sign in to continue your journey.</p>
       <form id="loginForm" class="form">
