updated edit and create post conflict

--- a/dashboard.html
+++ b/dashboard.html
@@ -79,7 +79,7 @@
       <section class="view" id="view-create">
         <div class="grid settings">
           <article class="card form-card">
-            <h2>Create Post</h2>
+            <h2 id="createTitle">Create Post</h2>
             <form class="form" id="createForm">
               <div class="field">
                 <input type="text" id="blogName" placeholder="" autocomplete="off" />
